--- a/WebContent/WEB-INF/zul/query/requestMoreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/requestMoreLikeThis.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,69 +14,21 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="mlt"
-	use="com.jaeksoft.searchlib.web.controller.query.MoreLikeThisController">
-	<grid>
-		<columns>
-			<column align="right" width="30%" />
-			<column align="left" />
-		</columns>
-		<rows>
-			<row>
-				<label value="Active: " />
-				<checkbox checked="@{mlt.request.moreLikeThis}" />
-			</row>
-			<row>
-				<label value="Document query: " />
-				<textbox width="95%"
-					value="@{mlt.request.moreLikeThisDocQuery}" />
-			</row>
-			<row>
-				<label value="Fields: " />
-				<listbox
-					model="@{mlt.request.moreLikeThisFieldList.list}">
-					<listhead>
-						<listheader>
-							<listbox model="@{mlt.fieldsLeft}"
-								mold="select" selectedItem="@{mlt.selectedField}" />
-						</listheader>
-						<listheader width="50px" align="center">
-							<button tooltiptext="Add a field"
-								image="/images/action_add.png" forward="onAddField" />
-						</listheader>
-					</listhead>
-					<listitem self="@{each=mltField}">
-						<listcell label="@{mltField.name}" />
-						<listcell>
-							<custom-attributes mltField="@{mltField}" />
-							<button tooltiptext="Remove the field"
-								image="/images/action_delete.png"
-								onClick="mlt.onRemoveField(self)" />
-						</listcell>
-					</listitem>
-				</listbox>
-			</row>
-			<row>
-				<label value="Minimum word length: " />
-				<intbox value="@{mlt.request.moreLikeThisMinWordLen}" />
-			</row>
-			<row>
-				<label value="Maximum word length: " />
-				<intbox value="@{mlt.request.moreLikeThisMaxWordLen}" />
-			</row>
-			<row>
-				<label value="Minimum document frequency: " />
-				<intbox value="@{mlt.request.moreLikeThisMinDocFreq}" />
-			</row>
-			<row>
-				<label value="Minimum term frequency: " />
-				<intbox value="@{mlt.request.moreLikeThisMinTermFreq}" />
-			</row>
-			<row>
-				<label value="Stop words: " />
-				<listbox model="@{mlt.stopWordsList}" mold="select"
-					selectedItem="@{mlt.request.moreLikeThisStopWords}" />
-			</row>
-		</rows>
-	</grid>
-</window>
+<tabbox>
+	<tabs>
+		<tab id="tabMoreLikeThis" label="General" selected="true" />
+		<tab id="tabReturn" label="Returned fields" />
+		<tab id="tabFilter" label="Filters" />
+	</tabs>
+	<tabpanels>
+		<tabpanel>
+			<include src="WEB-INF/zul/query/search/moreLikeThis.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabReturn.onSelect">
+			<include src="WEB-INF/zul/query/search/returned.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabFilter.onSelect">
+			<include src="WEB-INF/zul/query/search/filters.zul" />
+		</tabpanel>
+	</tabpanels>
+</tabbox>
