Default value for JsonPathFilter

--- a/WebContent/WEB-INF/zul/query/resultMoreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/resultMoreLikeThis.zul
@@ -2,7 +2,7 @@
 	use="com.jaeksoft.searchlib.web.controller.query.ResultMoreLikeThisController">
 	<!--
 		License Agreement for OpenSearchServer
-		Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+		Copyright (C) 2012 Emmanuel Keller / Jaeksoft
 		http://www.open-search-server.com
 		This file is part of OpenSearchServer.
 		OpenSearchServer is free software: you can
