--- a/WebContent/WEB-INF/zul/crawler/file/path.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/path.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -115,21 +115,29 @@
 					totalSize="@{searchPath.totalSize}"
 					pageSize="@{searchPath.pageSize}"
 					activePage="@{searchPath.activePage}" />
-				<label value="Line per page: " />
-				<intbox cols="3"
-					constraint="no negative, no zero, no negative"
-					value="@{searchPath.pageSize}" forward="onChange=onSearch" />
-				<space width="50px" />
-				<listbox mold="select" id="actionListbox">
-					<listitem label="Select an action" value="nothing"
-						selected="true" />
-					<listitem label="Update to Unfetched (re-crawl)"
-						value="setToUnfetched" />
-					<listitem label="Delete" value="delete" />
-					<listitem label="Optimize database"
-						value="optimize" />
-				</listbox>
-				<button label="Go" forward="onGo" />
+				<div id="taskLogInfo">
+					<label value="Line per page: " />
+					<intbox cols="3"
+						constraint="no negative, no zero, no negative"
+						value="@{searchPath.pageSize}" forward="onChange=onSearch" />
+					<space width="50px" />
+					<listbox mold="select" id="actionListbox">
+						<listitem label="Select an action"
+							value="nothing" selected="true" />
+						<listitem label="Update to Unfetched (re-crawl)"
+							value="setToUnfetched" />
+						<listitem label="Delete" value="delete" />
+						<listitem label="Optimize database"
+							value="optimize" />
+					</listbox>
+					<button label="Go" forward="onGo"
+						disabled="@{searchPath.fileManager.currentTaskLog}" />
+					<label
+						visible="@{searchPath.fileManager.currentTaskLog}"
+						value="@{searchUrl.fileManager.currentTaskLog.info}" />
+					<timer delay="5000" repeats="true"
+						onTimer="searchPath.onTimer()" running="@{searchPath.refresh}" />
+				</div>
 			</listfooter>
 		</listfoot>
 	</listbox>
