--- a/WebContent/WEB-INF/zul/crawler/file/edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/edit.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -133,7 +133,7 @@
 					<footer span="2">
 						<vbox width="100%" align="center">
 							<hbox
-								visible="@{filepathedit.selectedFilePath}">
+								visible="@{filepathedit.filePathSelected}">
 								<button label="Cancel"
 									forward="onCancel" />
 								<space width="10px" />
@@ -143,7 +143,10 @@
 									forward="onDelete" />
 							</hbox>
 							<hbox
-								visible="@{filepathedit.notSelectedFilePath}">
+								visible="@{filepathedit.noFilePathSelected}">
+								<button label="Cancel"
+									forward="onCancel" />
+								<space width="10px" />
 								<button label="Create" forward="onSave" />
 							</hbox>
 						</vbox>
