- The textbox used to edit the XSL is set to 100 cols - Only the first 10 lines are shown in the view of the scheduler task

--- a/WebContent/WEB-INF/zul/scheduler/edit.zul
+++ b/WebContent/WEB-INF/zul/scheduler/edit.zul
@@ -174,7 +174,7 @@
 												<label
 													multiline="@{property2.type.ctrlMultilineTextBox}"
 													visible="@{property2.type.ctrlNotPassword}"
-													value="@{property2.value}" />
+													value="@{property2.previewValue}" />
 											</listcell>
 										</listitem>
 									</listbox>
