--- a/WebContent/WEB-INF/zul/replication/index.zul
+++ b/WebContent/WEB-INF/zul/replication/index.zul
@@ -61,6 +61,14 @@
 						<label
 							value="API Key for authentication (or empty if no rights are required)" />
 					</row>
+					<row>
+						<label value="Destination mode: " />
+						<listbox mold="select"
+							model="@{replication.readWriteModeList}"
+							selectedItem="@{replication.item.readWriteMode}" />
+						<label
+							value="Select the read/write mode of the replicated index" />
+					</row>
 				</rows>
 				<foot>
 					<footer span="3">
@@ -97,6 +105,7 @@
 					<listheader label="Instance URL" />
 					<listheader label="Replication type" hflex="min" />
 					<listheader label="Index Name" hflex="min" />
+					<listheader label="Mode" hflex="min" />
 					<listheader label="Last execution time" hflex="min" />
 					<listheader label="Duration"
 						tooltiptext="last duration time" hflex="min" />
@@ -110,6 +119,7 @@
 					<listcell label="@{item.instanceUrl}" />
 					<listcell label="@{item.replicationType}" />
 					<listcell label="@{item.indexName}" />
+					<listcell label="@{item.readWriteMode}" />
 					<listcell
 						label="@{item.lastReplicationThread.startTime,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
 					<listcell
